# imzero_client_cpp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  env.sh  go.mod  go.sum
doc/: DX.md
imgui_glfw/: .gitignore  CMakeLists.txt  adapt_example.sh  build.sh  build_ab_initio.sh  build_cpp.sh  build_wasm.sh  cmakelists.dhall  common.dhall  extract_dep.sh  generate_links.sh  generate_links_.sh  main.cpp  make.dhall  make_wasm.dhall  run_pipe.sh
imgui_glfw/contrib/: imgui_knobs  imgui_toggle  skia
imgui_glfw/imcolortextedit/: TextEditor.cpp  TextEditor.h
imgui_glfw/imgui/: imconfig.h  imgui.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_internal.h  imgui_tables.cpp  imstb_rectpack.h  imstb_truetype.h
imgui_glfw/implot/: implot.cpp  implot.h
imgui_glfw/src/: render.cpp
imgui_skia/: .gitignore  CMakeLists.txt  README.md  build_ab_initio.sh  build_cpp_linux.sh  build_flatbuffers.sh  build_sdl3_linux.sh  build_sdl3_windows.sh  build_skia_linux.sh  build_skia_windows.sh  cmakelists_linux.dhall  copy_libs_linux.sh  copy_libs_windows.sh  patch_skia_m134.sh  run.sh  windows_notes.md
imgui_skia/dhall/: sourceTreeParts.dhall
imgui_skia/imgui_skia_driver_impl/: imgui_skia_app_sdl3.cpp  imgui_skia_cli_options.cpp  imgui_skia_cli_options.h
imgui_skia/imgui_skia_impl/: ImZeroFB.out.h  flatbufferHelpers.cpp  flatbufferHelpers.h  imgui_skia_config.h  imgui_skia_hooks_impl.cpp  imgui_skia_hooks_impl.h  imgui_skia_imzero_cmd_render.cpp  imgui_skia_imzero_cmd_render.h  imgui_skia_imzero_cmd_render_config.h  imgui_skia_paragraph.h  imgui_skia_setup_ui.cpp  imgui_skia_setup_ui.h  imgui_skia_tracy_support.cpp  imgui_skia_tracy_support.h
imgui_skia/imgui_w_hooks_1.91.9_wip/: hooking.h  imgui.cpp  imgui_impl_sdl3.cpp  imgui_widgets.cpp
skia/: .gitignore  CMakeLists.txt  DEMO.md  build.sh  build_ab_initio.sh  build_cpp.sh  build_cpp_linux.sh  build_cpp_windows.sh  build_flatbuffers.sh  build_go.sh  build_go_windows.sh  build_linux.sh  build_sdl3.sh  build_skia.sh  build_skia_asan.sh  build_skia_shared.sh  build_windows.sh  cmakelists.dhall  cmakelists_video.dhall  cmakelists_windows.dhall  common.dhall  copy_libs_linux.sh  cross.txt  dist.sh  env.sh  generate_fb_go.sh  generate_links.sh  imgui_exe  patch_skia_m124.sh  play.sh  play_sdl3.sh  play_zmq.sh  run.sh  run_debug.sh  run_pipe.sh  run_windows.cmd  run_windows.sh  stacktrace.sh  video.sh  video_null.sh  (+8 more)
skia/contrib/: flatbuffers  imgui_ImGuiColorTextEdit  imgui_club  imgui_imspinner  imgui_knobs  imgui_toggle
skia/dhall/: sourceTreeParts.dhall
skia/imcolortextedit/: LanguageDefinitions.cpp  TextEditor.cpp  TextEditor.h
skia/imgui/: ImZeroFB.fbs  ImZeroFB.out.h  hooking.h  hooks.cpp  imconfig.h  imgui.h  imgui_draw.cpp  imgui_draw_fb.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_impl_sdl3.h  imgui_internal.h  imgui_user_prolog.h  imzero_config.h  imzero_draw_font.cpp  imzero_draw_font.h  imzero_draw_list.cpp  imzero_draw_list.h  imzero_draw_splitter.cpp  imzero_draw_splitter.h  imzero_draw_utils.cpp  imzero_draw_utils.h  imzero_extensions.cpp  imzero_extensions.h  imzero_hooks.cpp  imzero_hooks.h  vectorCmd.fbs  vectorCmd_generated.h
skia/implot/: implot.cpp  implot_internal.h  implot_items.cpp
skia/imzero_client_skia_sdl3_impl/: bmp_encoder.cpp  imzero_client_skia_sdl3_app.cpp  imzero_client_skia_sdl3_app.h  imzero_client_skia_sdl3_cli_options.cpp  main.cpp
skia/main/: cliOptions.cpp  cliOptions.h  imzero_assert.h  paragraph.cpp  setupUI.h  vectorCmdSkiaRenderer.cpp
skia/skia/: ImZeroFB.out.h  README.md  cliOptions.cpp  cliOptions.h  paragraph.cpp  paragraph.h  setupUI.cpp  setupUI.h  skiaTracyTracer.h  vectorCmdSkiRendererConfig.h  vectorCmdSkiaRenderer.cpp  vectorCmdSkiaRenderer.h
skia/src/: adobe_spectrum_style.h  implot_style.h  imthemes_style.h  render.cpp  render.h  style.h
skia2/: .gitignore  CMakeLists.txt  build.sh  build_cpp.sh  cmakelists.dhall  common.dhall  copy_libs.sh  generate_links.sh  play.sh  profile_record.sh  run_debug.sh  run_pipe.sh  stacktrace.sh  tags.sh  video_local.sh  video_local_h264.sh  video_null.sh  video_remote_client.sh  video_userinput.sh
skia2/contrib/: imgui_ImCoolBar  imgui_flame-graph  imgui_implot  qoi
skia2/dhall/: sourceTreeParts.dhall
skia2/imzero_client_skia_sdl3_impl/: bmp_encoder.h  imzero_client_skia_sdl3_app.cpp  imzero_client_skia_sdl3_app.h  imzero_client_skia_sdl3_cli_options.cpp  imzero_client_skia_sdl3_cli_options.h  main.cpp  skiaTracyTracer.cpp
skia_minimal/: .gitignore  CMakeLists.txt  build.sh  build_ab_initio.sh  build_cpp.sh  build_cpp_linux.sh  build_cpp_windows.sh  build_cross.sh  build_flatbuffers.sh  build_linux.sh  build_sdl3.sh  build_sdl3_windows.h  build_sdl3_windows.sh  build_skia_shared.sh  build_skia_shared_windows.sh  build_skia_static_windows.sh  build_skia_windows.sh  build_windows.sh  checkout_3rd_party_git_repos.sh  cmakelists.dhall  cmakelists_win.dhall  cmakelists_windows.dhall  common.dhall  copy_libs.sh  copy_libs_linux.sh  copy_libs_windows.sh  generate_links.sh  patch_skia_m124.sh  windows_notes.md
skia_minimal/contrib/: .gitignore  tracy
skia_minimal/dhall/: sourceTreeParts.dhall
skia_minimal/distrobox/: distrobox.ini  setup_ubuntu.sh
skia_minimal/example_sdl3/: main.cpp
skia_minimal/imgui/: imgui.cpp  imgui_user_prolog.h  imzero_extensions.cpp  imzero_extensions.h  imzero_hooks.cpp
skia_minimal/imgui_skia/: ImZeroFB.out.h  imgui_skia_extensions.cpp  imgui_skia_extensions.h  imgui_skia_hooks_impl.cpp  imgui_skia_hooks_impl.h  imgui_skia_imzero_cmd_render.cpp  imgui_skia_imzero_cmd_render.h  imgui_skia_paragraph.cpp
skia_minimal/imgui_skia_driver_impl/: imgui_skia_app_sdl3.cpp  imgui_skia_app_sdl3.h  imgui_skia_cli_options.cpp  imgui_skia_cli_options.h
skia_minimal/imgui_skia_impl/: flatbufferHelpers.cpp  flatbufferHelpers.h  imgui_skia_app_sdl3.cpp  imgui_skia_app_sdl3.h  imgui_skia_cli_options.cpp  (+11 more)
video_player/: .gitignore  CMakeLists.txt  build.sh  build_cpp.sh  cmakelists.dhall  common.dhall  generate_links.sh  stacktrace.sh
(+200 files in other folders)
